fix(layout): improve whitespace

--- a/src/components/composites/AspectScores.scss
+++ b/src/components/composites/AspectScores.scss
@@ -14,7 +14,7 @@
         justify-content: center;
     }
 
-    padding: 1rem 2rem 0 1rem;
+    padding: 1rem 2rem 1rem 1rem;
     
     gap: 2rem;
 
